tests/baselines/reference/unusedLocalsInMethod4.errors.txt
unusedLocalsInMethod4.ts(2,9): error TS2454: Variable 'x1' is used before being assigned.
unusedLocalsInMethod4.ts(3,9): error TS2454: Variable 'x2' is used before being assigned.
unusedLocalsInMethod4.ts(9,9): error TS2454: Variable 'x8' is used before being assigned.
unusedLocalsInMethod4.ts(10,9): error TS2454: Variable 'x9' is used before being assigned.
unusedLocalsInMethod4.ts(27,9): error TS2454: Variable 'x1' is used before being assigned.
unusedLocalsInMethod4.ts(28,9): error TS2454: Variable 'x2' is used before being assigned.
unusedLocalsInMethod4.ts(34,9): error TS2454: Variable 'x8' is used before being assigned.
unusedLocalsInMethod4.ts(35,9): error TS2454: Variable 'x9' is used before being assigned.
unusedLocalsInMethod4.ts(37,17): error TS2454: Variable 'x1' is used before being assigned.
unusedLocalsInMethod4.ts(38,17): error TS2454: Variable 'x2' is used before being assigned.
unusedLocalsInMethod4.ts(44,17): error TS2454: Variable 'x8' is used before being assigned.
unusedLocalsInMethod4.ts(45,17): error TS2454: Variable 'x9' is used before being assigned.
unusedLocalsInMethod4.ts(49,9): error TS2454: Variable 'x' is used before being assigned.
unusedLocalsInMethod4.ts(57,9): error TS2454: Variable 'x' is used before being assigned.


==== unusedLocalsInMethod4.ts (14 errors) ====
    function f<T, NonNull extends {}>() {
        let x1: number[]; // should error
            ~~
!!! error TS2454: Variable 'x1' is used before being assigned.
        let x2: number[] | null; // should error
            ~~
!!! error TS2454: Variable 'x2' is used before being assigned.
        let x3: number[] | undefined; // should not error
        let x4: number[] | undefined | null; // should not error
        let x5!: number[]; // should not error
        let x6: any; // should not error
        let x7: unknown; // should not error
        let x8: T; // should error
            ~~
!!! error TS2454: Variable 'x8' is used before being assigned.
        let x9: NonNull; // should error
            ~~
!!! error TS2454: Variable 'x9' is used before being assigned.
    
        function foo() {
            console.log(x1);
            console.log(x2);
            console.log(x3);
            console.log(x4);
            console.log(x5);
            console.log(x6);
            console.log(x7);
            console.log(x8);
            console.log(x9);
        }
        foo();
    }
    
    function f2<T, NonNull extends {}>() {
        let x1: number[]; // should error
            ~~
!!! error TS2454: Variable 'x1' is used before being assigned.
        let x2: number[] | null; // should error
            ~~
!!! error TS2454: Variable 'x2' is used before being assigned.
        let x3: number[] | undefined; // should not error
        let x4: number[] | undefined | null; // should not error
        let x5!: number[]; // should not error
        let x6: any; // should not error
        let x7: unknown; // should not error
        let x8: T; // should error
            ~~
!!! error TS2454: Variable 'x8' is used before being assigned.
        let x9: NonNull; // should error
            ~~
!!! error TS2454: Variable 'x9' is used before being assigned.
    
        console.log(x1);
                    ~~
!!! error TS2454: Variable 'x1' is used before being assigned.
        console.log(x2);
                    ~~
!!! error TS2454: Variable 'x2' is used before being assigned.
        console.log(x3);
        console.log(x4);
        console.log(x5);
        console.log(x6);
        console.log(x7);
        console.log(x8);
                    ~~
!!! error TS2454: Variable 'x8' is used before being assigned.
        console.log(x9);
                    ~~
!!! error TS2454: Variable 'x9' is used before being assigned.
    }
    
    function f3() {
        let x: number[];    // should error
            ~
!!! error TS2454: Variable 'x' is used before being assigned.
        function foo() {
            x.toString();
        }
        foo();
    }
    
    function f4() {
        let x: number;  // should error
            ~
!!! error TS2454: Variable 'x' is used before being assigned.
        return {
            foo() {
                return x.toString();
            }
        };
    }
    
    declare let x: number;  // should error
    function f5() {
        x.toString();
    }
    export default {};
    
    